--- a/index.html
+++ b/index.html
@@ -46,12 +46,53 @@
             <div class="col-md-3">
                 <form class="bg-dark">
                     <p>Filter Search</p>
-                    <ul class="bg-dark">
-                        <li class="bg-dark">
+                    <ul class="list-group bg-dark">
+                        <!-- Filter by Date -->
+                        <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
-                        <li class="bg-dark">
+                        <li class="list-group-item bg-dark">
+                            <button id="filter-btn" type="button" class="btn btn-dark">
+                                Filter Table
+                            </button>
+                        </li>
+                        <!-- Filter by City -->
+                        <li class="list-group-item bg-dark">
+                            <label for="city">Enter City</label>
+                            <input type="text" placeholder="fresno" id="city" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <button id="filter-btn" type="button" class="btn btn-dark">
+                                Filter Table
+                            </button>
+                        </li>
+                        <!-- Filter by State -->
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter State</label>
+                            <input type="text" placeholder="ca" id="state" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <button id="filter-btn" type="button" class="btn btn-dark">
+                                Filter Table
+                            </button>
+                        </li>
+                        <!-- Filter by Country -->
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <button id="filter-btn" type="button" class="btn btn-dark">
+                                Filter Table
+                            </button>
+                        </li>
+                        <!-- Filter by Shape -->
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" placeholder="circle" id="shape" />
+                        </li>
+                        <li class="list-group-item bg-dark">
                             <button id="filter-btn" type="button" class="btn btn-dark">
                                 Filter Table
                             </button>
